# Tools

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.html  LICENSE  LICENSE.html  MANIFEST.in  README.md  README.qmd  SECURITY.md  VERSION  badges.html  basic_usage.html  cite.html  cli.html  contributors.html  help.html  index.html  install.html  pyproject.toml  scripts.html  search.json  sitemap.xml  which_vpn.sh
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
0.1/: CHANGELOG.html  index.html  search.json  sitemap.xml
0.2/: CHANGELOG.html  LICENSE.html  badges.html  basic_usage.html  cite.html  cli.html  contributors.html  help.html  index.html  install.html  search.json  sitemap.xml
0.3/: CHANGELOG.html  LICENSE.html  basic_usage.html  cite.html  cli.html  index.html  install.html  scripts.html  search.json  sitemap.xml
0.4/: CHANGELOG.html  CONTRIBUTING.html  LICENSE.html  badges.html  basic_usage.html  cite.html  cli.html  contributors.html  help.html  index.html  install.html  scripts.html  search.json  sitemap.xml
0.5/: CHANGELOG.html  CONTRIBUTING.html  cite.html  cli.html  contributors.html  index.html  robots.txt  search.json  sitemap.xml
0.6/: LICENSE.html  index.html  scripts.html  search.json  sitemap.xml
0.7/: CHANGELOG.html  CONTRIBUTING.html  LICENSE.html  cite.html  cli.html  contributors.html  index.html  search.json  sitemap.xml
Biowulf/: Box.md  cancel_snakemake_jobs.sh  create_hpc_link.sh  example.snakemake.log.HPC_stats.biowulf.tsv  example.snakemake.log.HPC_stats.tsv  gather_cluster_stats.sh  gather_cluster_stats_biowulf.sh  get_slurm_file_with_error.sh  intersect  run_jobby_on_nextflow_log_full_format  run_jobby_on_snakemake_log_full_format
GSEA/: deg2gs.py  gsea_preranked  multitext2excel.py
Karyoplot/: karyoploter.R
dev/: CHANGELOG.html  CONTRIBUTING.html  index.html  search.json  sitemap.xml
docs/: .gitignore  _basic_usage.qmd  _install.qmd  _quarto.yml  badges.qmd  basic_usage.qmd  cite.qmd  cli.qmd  contributors.qmd  help.qmd  index.qmd  install.qmd  render_site.sh  scripts.qmd
gb2gtf/: gb2gtf.py
git/: Git_commands.html  Git_commands.md  README.md
homologfinder/: README.md  create_human_mouse_homolog_table.py  hf  human_mouse_homolog_lookup.txt
main/: CHANGELOG.html  index.html  search.json
plans/: CCBR_TOOLS_CHANGES.md  RELEASE_PLAN.md
reference/: GSEA.deg2gs.html  GSEA.multitext2excel.html  GSEA.ncbr_huse.html  gb2gtf.html  github.html  homologfinder.hf.html  hooks.detect_absolute_paths.html  hooks.html  hooks.sync_nextflow_version.html  index.html  intersect.html  jobby.html  jobinfo.html  module_list.html  paths.html  peek.html  pipeline.cache.html  pipeline.hpc.html  pipeline.html  pipeline.nextflow.html  pipeline.util.html  pkg_util.html  send_email.html  shell.html  software.html  spooker.html  templates.html  versions.html
scripts/: add_gene_name_to_count_matrix.R  aggregate_data_tables.R  cancel_snakemake_jobs.sh  create_hpc_link.sh  create_priority_labels.sh  create_weekly_milestones_for_whole_year.sh  extract_value_from_json.py  extract_value_from_yaml.py  filter_bam_by_readids.py  filter_fastq_by_readids_highmem.py  filter_fastq_by_readids_highmem_pe.py  gather_cluster_stats.sh  gather_cluster_stats_biowulf.sh  get_buyin_partition_list.bash  get_slurm_file_with_error.sh  github_milestones.sh  gsea_preranked.sh  karyoploter.R  make_labels_for_pipeliner.sh  rawcounts2normalizedcounts_DESeq2.R  rawcounts2normalizedcounts_limmavoom.R  run_jobby_on_nextflow_log  run_jobby_on_nextflow_log_full_format  run_jobby_on_snakemake_log  run_jobby_on_snakemake_log_full_format  spooker  which_vpn.sh
src/ccbr_tools/: CITATION.cff  VERSION  __init__.py  __main__.py  gb2gtf.py  get_hpcname.py  github.py  intersect.py  jobby.py  jobinfo.py  module_list.py  paths.py  peek.py  pkg_util.py  pyproject.toml  send_email.py  shell.py  software.py  spooker.py  util.py  versions.py
src/ccbr_tools/Biowulf/: example.snakemake.log.HPC_stats.tsv  jobinfo  make_labels_for_pipeliner.sh  peek  run_jobby_on_nextflow_log  run_jobby_on_snakemake_log
src/ccbr_tools/GSEA/: __init__.py  deg2gs.py  multitext2excel.py  ncbr_huse.py
src/ccbr_tools/GSEA/NCBRgseaheatmap/: DESCRIPTION  NAMESPACE
src/ccbr_tools/GSEA/NCBRgseaheatmap/R/: gsea_to_mtx.R  pathway_heatmap.R
src/ccbr_tools/GSEA/NCBRgseaheatmap/man/: gsea_to_mtx.Rd  pathway_heatmap.Rd
src/ccbr_tools/homologfinder/: README.md  __init__.py  create_human_mouse_homolog_table.py  hf.py  human_mouse_homolog_lookup.txt
src/ccbr_tools/hooks/: __init__.py  __main__.py  detect_absolute_paths.py  sync_nextflow_version.py
src/ccbr_tools/pipeline/: __init__.py  cache.py  hpc.py  nextflow.py  snakemake.py  util.py
src/ccbr_tools/templates/: __init__.py  slurm_nxf_biowulf.sh  slurm_nxf_frce.sh  slurm_smk_biowulf.sh  slurm_smk_frce.sh  submit_slurm.sh
src/ccbr_tools/templates/_extensions/fnl/: __init__.py  _extension.yml  fnl-dark.scss  fnl-light-revealjs.scss  fnl-light.scss
src/ccbr_tools/templates/mkdocs-fnl/: mkdocs.yaml
src/ccbr_tools/templates/mkdocs-fnl/docs/custom-overrides/partials/: header.html
src/ccbr_tools/templates/mkdocs-fnl/docs/stylesheets/: extra.css
src/ccbr_tools/templates/pkgdown-fnl/: _pkgdown.yml
src/ccbr_tools/templates/pkgdown-fnl/pkgdown/: extra.scss
src/ccbr_tools/templates/pkgdown-fnl/pkgdown/templates/: layout.html
tests/: conftest.py  test_cli.py  test_cli_entrypoint.py  test_gb2gtf.py  test_get_hpcname.py  test_github.py  test_gsea.py  test_gsea_cli.py  test_homologfinder.py  test_hooks.py  test_hpc.py  test_intersect.py  test_jobby.py  test_jobinfo.py  test_module_list.py  test_nextflow.py  test_peek.py  test_pipeline_cache.py  test_pipeline_hpc.py  test_pipeline_util.py  test_pkg_util.py  test_scripts.py  test_send_email.py  test_shell.py  test_software.py  test_spooker.py  test_templates.py  test_util.py  test_versions.py
v0.1.0/: index.html  search.json  sitemap.xml
(+259 files in other folders)
